css/style.css
/* Set height of body and the document to 100% to enable "full page tabs" */
body, html {
  height: 100%;
  margin: 0;
  font-family: Arial;
}

/* Style tab links */
.btn{
  text-align: left;
  font-size: 18px;
  background-color: Transparent;
  background-repeat:no-repeat;
  color: white;
  border: none;
  cursor:pointer;
  overflow: hidden;
  outline:none;
  width: 100%;
}

.sub-btn{
  font-size: 20px;
  background-color: #3e8914;
  border: none;
  border-radius: 10px;
  /*height: 50px; */
}

.prnt-btn{
  font-size: 20px;
  background-color: #0086b3;
  border: none;
  border-radius: 10px;
}

.sub-btn:hover{
  background-color: #134611;
}

.prnt-btn:hover{
  background-color: #006080;
}

.adj-btn{
  font-size: 20px;
  background-color: #3e8914;
  border: none;
  border-radius: 10px;
  width: 30%;
  height: 50px;
}

.adj-btn:hover{
  background-color: #134611;
}

.card-header{
  background-color: #05668d;
}

.card-header:hover{
  background-color: #1d3557;
}

.card{
  text-align: left;
  background-color: #006494;
}

/* Style tab links */
.tablink {
  background-color: #555;
  color: white;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 10px 10px;
  font-size: 15px;
  width: 25%;
  position: sticky;
  position: -webkit-sticky;
  box-shadow: 5px -5px 5px #FFF;
}

.tablink:hover {
  background-color: #777;
}

/* Style the tab content (and add height:100% for full page content) */
.tabcontent {
  color: white;
  display: none;
  padding: 100px 20px;
  /*height: 100%;*/
}

#Qn {background-color: #2c4268;}
#Scores {background-color: #3AA696;}
#About {background-color: #707c48;}
#Contact {background-color: #94618E;}

/*
table, th, td {
  border: 1px solid #ffff80;
}
*/

.sTable {
  background-color: #309080;
}

a {
    text-decoration: none;
    color: white;
}

a:hover {
    text-decoration: underline;
}

a:link, .nav a, .nav a:visited {
    color: white;
}

#header {
  font-family: sans-serif;
  font-size: max(0.9em, 12px);
  top: 0px;
  padding-bottom: 0px;
  /* border-bottom: 1px solid #eceefb; */
  box-shadow: 2px 7px 10px #999;
  position: sticky;
  position: -webkit-sticky;
  z-index: 10;
}
#footer {
  font-family: serif;
  font-size: max(0.9em, 12px);
  bottom: 0px;
  border-top: 0px solid #eceefb;
  box-shadow: 2px -5px 10px #999;
  position: sticky;
  position: -webkit-sticky;
  z-index: 10;
}

.sh5 {
  color: #ffff00;
}

.overall_report{
  font-size: 1.1em;
  font-weight: bold;
  background-color: #0086b3;
  border: none;
  border-radius: 10px;
  text-align: center;
}

.card-header {
    width: 100%;
}

.rTableHead {
  background-color: #2c4268;
}


.scoreCol {
  text-align: center;
  /* column-width: 80px; */
}


@keyframes blinker {
  50% {
    opacity: 0;
  }
}

.blinking {
  animation: blinker 1s linear 10;
}

.fbPanel {
    border: 1px groove #ccc !important;
    padding: 0 1.4em 1.4em 1.4em !important;
    margin: 0 0 1.5em 0 !important;
    -webkit-box-shadow:  2px 2px 5px 5px #aaa;
            box-shadow:  2px 2px 5px 5px #aaa;
}
.fbLegend {
    width:inherit; /* Or auto */
    padding:0 10px; /* To give a bit of padding on the left and right */
    border-bottom:1px;
}

@media screen and (max-width: 1200px) {
   .header-wide {
    display: none;
  }
   .footer-wide {
    display: none;
  }
  #GoK_print {
    display: none;
  }
}

@media screen and (min-width: 1199px) {
  .header-narrow {
   display: none;
  }
  #GoK_print {
    display: none;
  }
  #GoK_screen {
    display: block;
  }
}

@media print {
	body {
		margin: 1cm;
		color: #000;
		background-color: #fff;
		width: 95%;
		display: block;
	}
	.row {
	  display:block !important;
  }

  #GoK_screen {
    display: none;
  }
	#GoK_print { 
		page-break-inside: always;
		float: none;
		display: block;
	}
  .page-break	{
    display: block; 
    page-break-after: always; 
  }
	a:link, a:visited {
	    text-decoration: none;
			color: black;
	}
}

